--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^8.1.1",
+    "@mantine/hooks": "^8.1.1",
+    "lucide-react": "^0.516.0",
     "next": "15.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
@@ -18,9 +21,12 @@
     "@types/node": "^20",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "daisyui": "^5.0.43",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
