--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^8.1.1",
-    "@mantine/hooks": "^8.1.1",
+    "@heroui/react": "^2.7.10",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.516.0",
     "next": "15.2.0",
     "react": "19.0.0",
@@ -25,7 +25,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "postcss": "^8.5.6",
-    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
