--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.10",
+    "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.516.0",
     "next": "15.2.0",
