--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@types/node": "^20",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.43",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "postcss": "^8.5.6",
     "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.4.1",
+    "sass": "^1.89.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
   "pnpm": {
